[package]
name = "reqwest-proxy-pool"
version = "0.1.2"
edition = "2021"
authors = ["Wenfeng Sui <suiwenfeng@qq.com>"]
description = "proxy pool middleware for reqwest"
license = "MIT"
keywords = ["proxy", "reqwest", "middleware", "http", "client"]
categories = ["web-programming::http-client"]

[dependencies]
reqwest = { version = "0.12.22", features = ["json", "socks"] }
reqwest-middleware = ">=0.4.2"
tokio = { version = "1.46.1", features = ["full"] }
futures = "0.3"
log = "0.4.27"
thiserror = "2.0.12"
async-trait = "0.1"
governor = "0.10.0"
rand = "0.9.1"
url = "2.3"
parking_lot = "0.12.4"
anyhow = "1.0.81"
http = "1.1"

[dev-dependencies]
env_logger = "0.11.8"
tokio-test = "0.4"

[[example]]
name = "simple"
path = "src/examples/simple.rs"
